industry and map palette

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		
 		<script src="scripts/industry_handler.js"></script>
 		<script src="scripts/inventory_handler.js"></script>
+		<script src="scripts/time_handler.js"></script>
 		
 		<script src="scripts/state_manager.js"></script>
 
