--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src="scripts/inventory_handler.js"></script>
 		<script src="scripts/reports_handler.js"></script>
 		<script src="scripts/time_handler.js"></script>
+		<script src="scripts/city_handler.js"></script>
 		
 		<script src="scripts/state_manager.js"></script>
 
