pre-overhaul, many minor unfinished changes.
This is intended as a stash for the overhaul. Just in case something weird happens when overhauling, and sometimes to reference old code, we're going to rebuild a good portion of the code from the ground up.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 		
 		<script src="scripts/producer.js"></script>
 		<script src="scripts/inventory.js"></script>
+		<script src="scripts/factory.js"></script>
 		
+		<script src="scripts/money_lender.js"></script>
+
 		<script src="scripts/industry_handler.js"></script>
 		<script src="scripts/inventory_handler.js"></script>
 		<script src="scripts/reports_handler.js"></script>
