--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 		<script src="scripts/uihandler.js"></script>
 		
 		<script src="scripts/currency_converter.js"></script>
-		<script src="scripts/viewport.js"></script>
 		<script src="scripts/map.js"></script>
 		
 		<script src="scripts/producer.js"></script>
 		<script src="scripts/inventory.js"></script>
 		<script src="scripts/factory.js"></script>
-		
+		<script src="scripts/contract.js"></script>
 		<script src="scripts/money_lender.js"></script>
+		<script src="scripts/city_hall_handler.js"></script>
+		<script src="scripts/market.js"></script>
 
 		<script src="scripts/industry_handler.js"></script>
 		<script src="scripts/inventory_handler.js"></script>
