--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<script src="scripts/time_handler.js"></script>
 		<script src="scripts/city_handler.js"></script>
 		
+		<script src="scripts/city/city.js"></script>
+		
 		<script src="scripts/state_manager.js"></script>
 
 		<script src="scripts/engine.js"></script>
