AUTOBUY IS BACK! BABY!
-aaaaand I'm an idiot (why are there TWO Players?)
-autobuy
-inventory selling
- a little script moving

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<script src="scripts/map.js"></script>
 		
 		<script src="scripts/producer.js"></script>
+		<script src="scripts/firm.js"></script>
 		<script src="scripts/inventory.js"></script>
 		<script src="scripts/factory.js"></script>
 		<script src="scripts/contract.js"></script>
 		<script src="scripts/money_lender.js"></script>
 		<script src="scripts/city_hall_handler.js"></script>
-		<script src="scripts/market.js"></script>
 
 		<script src="scripts/industry_handler.js"></script>
 		<script src="scripts/inventory_handler.js"></script>
@@ -26,6 +26,7 @@
 		<script src="scripts/city_handler.js"></script>
 		
 		<script src="scripts/city/city.js"></script>
+		<script src="scripts/city/market.js"></script>
 		
 		<script src="scripts/state_manager.js"></script>
 
